:green_heart: Fix: ci build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,6 @@ jobs:
 
       - name: Build and test
         run: |
+          git submodule update --init
           docker build -t my-image .
           docker run my-image
