--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: jgo <jgo@student.42seoul.fr>               +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/07 19:34:14 by jgo               #+#    #+#              #
-#    Updated: 2023/05/14 17:50:32 by jgo              ###   ########.fr        #
+#    Updated: 2023/05/16 15:34:01 by jgo              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,8 @@ include ../make_config/Color_Rules.mk
 
 SRCS :=	main.cpp \
 		ClapTrap.cpp \
-		ScavTrap.cpp
+		ScavTrap.cpp \
+		FragTrap.cpp
 
 NAME := Serena_my_love!
 
